core/roboconf-core/src/test/resources/configurations/invalid/instanceof-line-number.instances
instance of a {

	# a comment

	name: server1;
